// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Models /> should render properly with models 1`] = `
Array [
  .emotion-1 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  color: #ffffff;
  background-color: #0074f5;
  border-radius: 8px;
  font-size: 11px;
  line-height: 15.399999999999999px;
  font-weight: 500;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  padding: 2px;
  padding-left: 6px;
  padding-right: 6px;
  margin-left: 8px;
}

<h2
    className="emotion-1"
  >
    Custom Models
    <span
      className="emotion-0"
    >
      beta
    </span>
  </h2>,
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-0 a {
  color: #009f22;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-0"
        role="alert"
      >
        Model created.
         
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer"
          href="/[projectId]/visualizer"
          passHref={true}
        >
          <a
            onClick={[Function]}
          >
            Start Labeling
          </a>
        </Link>
      </div>
    </div>
  </div>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/models"
          href="/[projectId]/models"
          passHref={true}
        >
          <a
            className="emotion-0"
            onClick={[Function]}
          >
            View all
          </a>
        </Link>
      </li>
      <li
        className="emotion-1"
      >
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/models/add"
          href="/[projectId]/models/add"
          passHref={true}
        >
          <a
            className="emotion-2"
            onClick={[Function]}
          >
            Create New Model
          </a>
        </Link>
      </li>
    </ul>
  </nav>,
  .emotion-16 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-2 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-2:nth-of-type(0) {
  width: 100%;
}

.emotion-2:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-13 {
  height: auto;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-13 tr {
  background-color: #252525;
}

.emotion-13 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-13 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-13 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-13 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-13 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-13 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-13 td {
  max-width: calc(100vw / 2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-13 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-13 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-6 {
  cursor: pointer;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    className="emotion-16"
  >
    <div
      className="emotion-1"
    >
      <h3
        className="emotion-0"
      >
        Number of 
        Models
        : 
        2
      </h3>
    </div>
    <div
      className="emotion-15"
    >
      <div
        className="emotion-14"
      >
        <table
          className="emotion-13"
        >
          <thead>
            <tr>
              <th
                className="emotion-2"
              >
                Name
              </th>
              <th
                className="emotion-2"
              >
                Type
              </th>
              <th
                className="emotion-2"
              >
                Module
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="emotion-6"
              onClick={[Function]}
            >
              <td>
                <Link
                  as="/76917058-b147-4556-987a-0a0f11e46d9b/models/621bf774-89d9-1244-9596-d6df43f1ede5"
                  href="/[projectId]/models/[modelId]"
                  passHref={true}
                >
                  <a
                    className="emotion-5"
                  >
                    console_face_recognition
                  </a>
                </Link>
              </td>
              <td>
                ZVI_FACE_RECOGNITION
              </td>
              <td>
                zvi-console_face_recognition-face-recognition
              </td>
            </tr>
            <tr
              className="emotion-6"
              onClick={[Function]}
            >
              <td>
                <Link
                  as="/76917058-b147-4556-987a-0a0f11e46d9b/models/621bf774-89d9-9596-1244-d6df43f1ede5"
                  href="/[projectId]/models/[modelId]"
                  passHref={true}
                >
                  <a
                    className="emotion-5"
                  >
                    console_cat_recognition
                  </a>
                </Link>
              </td>
              <td>
                ZVI_CAT_RECOGNITION
              </td>
              <td>
                zvi-console_cat_recognition-cat-recognition
              </td>
            </tr>
            <tr
              className="emotion-6"
              onClick={[Function]}
            >
              <td>
                <Link
                  as="/76917058-b147-4556-987a-0a0f11e46d9b/models/c0e83460-6a25-1238-86fa-0242ac150002"
                  href="/[projectId]/models/[modelId]"
                  passHref={true}
                >
                  <a
                    className="emotion-5"
                  >
                    Gundam
                  </a>
                </Link>
              </td>
              <td>
                ZVI_LABEL_DETECTION
              </td>
              <td>
                Gundam
              </td>
            </tr>
            <tr
              className="emotion-6"
              onClick={[Function]}
            >
              <td>
                <Link
                  as="/76917058-b147-4556-987a-0a0f11e46d9b/models/c0e83462-6a25-1238-86fa-0242ac150002"
                  href="/[projectId]/models/[modelId]"
                  passHref={true}
                >
                  <a
                    className="emotion-5"
                  >
                    Location
                  </a>
                </Link>
              </td>
              <td>
                ZVI_LABEL_DETECTION
              </td>
              <td>
                Location
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;

exports[`<Models /> should render properly with no models 1`] = `
Array [
  .emotion-1 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  color: #ffffff;
  background-color: #0074f5;
  border-radius: 8px;
  font-size: 11px;
  line-height: 15.399999999999999px;
  font-weight: 500;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  padding: 2px;
  padding-left: 6px;
  padding-right: 6px;
  margin-left: 8px;
}

<h2
    className="emotion-1"
  >
    Custom Models
    <span
      className="emotion-0"
    >
      beta
    </span>
  </h2>,
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-0 a {
  color: #009f22;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-0"
        role="alert"
      >
        Model deleted.
      </div>
    </div>
  </div>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/models"
          href="/[projectId]/models"
          passHref={true}
        >
          <a
            className="emotion-0"
            onClick={[Function]}
          >
            View all
          </a>
        </Link>
      </li>
      <li
        className="emotion-1"
      >
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/models/add"
          href="/[projectId]/models/add"
          passHref={true}
        >
          <a
            className="emotion-2"
            onClick={[Function]}
          >
            Create New Model
          </a>
        </Link>
      </li>
    </ul>
  </nav>,
  .emotion-11 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-9 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-8 {
  height: 100%;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-8 tr {
  background-color: #252525;
}

.emotion-8 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-8 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-8 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-8 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-8 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-8 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-8 td {
  max-width: calc(100vw / 2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-8 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-8 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-2 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-2:nth-of-type(0) {
  width: 100%;
}

.emotion-2:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-7 {
  height: 100%;
  pointer-events: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
    className="emotion-11"
  >
    <div
      className="emotion-1"
    >
      <h3
        className="emotion-0"
      >
        Number of 
        Models
        : 
        0
      </h3>
    </div>
    <div
      className="emotion-10"
    >
      <div
        className="emotion-9"
      >
        <table
          className="emotion-8"
        >
          <thead>
            <tr>
              <th
                className="emotion-2"
              >
                Name
              </th>
              <th
                className="emotion-2"
              >
                Type
              </th>
              <th
                className="emotion-2"
              >
                Module
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="emotion-7"
            >
              <td
                colSpan={3}
              >
                <div
                  className="emotion-6"
                >
                  <div
                    className="emotion-5"
                  >
                    <svg
                      data-file-name="noJobs.svg"
                      width={200}
                    />
                    <div>
                      There are currently no custom models.
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
]
`;
